tests/compile_fail/default_conflict.dd
from serdde.macros import Serde


@derive(Serde)
class DefaultConflict:
    @Serde(default=True, default_with="make_value")
    value: i32
